--- a/around_server/public/css/style.css
+++ b/around_server/public/css/style.css
@@ -47,7 +47,15 @@ html, body {
 .title {
     font-size: 80px;
 }
-
+@media(max-width:768px) {
+    .content {
+        width: 100%; 
+        margin: 0 auto;
+    }
+    .title {
+        font-size: 55px;
+    }
+}
 .links > a {
     color: #636b6f;
     padding: 0 25px;
