--- a/around_server/public/css/startmin.css
+++ b/around_server/public/css/startmin.css
@@ -205,7 +205,7 @@ body {
 
 .chat li {
     margin-bottom: 10px;
-    padding-bottom: 5px;
+    padding: 10px 0;
     border-bottom: 1px dotted #999;
 }
 
