--- a/around_server/public/css/style.css
+++ b/around_server/public/css/style.css
@@ -1,7 +1,6 @@
 html, body {
-    background-color: #fff;
+    /* background-color: #fff; */
     color: #636b6f;
-    font-family: 'Raleway', sans-serif;
     font-weight: 100;
     height: 100vh;
     margin: 0;
@@ -45,6 +44,7 @@ html, body {
 }
 
 .title {
+    font-family: 'Raleway', sans-serif;
     font-size: 80px;
 }
 @media(max-width:768px) {
