--- a/around_server/public/css/style.css
+++ b/around_server/public/css/style.css
@@ -88,7 +88,9 @@ html, body {
 .links {
     margin-bottom: 20px;
 }
-
+.title a:hover {
+    text-decoration: none;
+}
 
 #banner{
 background:#fff;/*背景(可視化用)*/
